fix: text overflow on home page

--- a/resources/assets/src/styles/home.css
+++ b/resources/assets/src/styles/home.css
@@ -75,7 +75,7 @@ body {
 
 .main-button {
   color: #fff;
-  padding: 0.8em 2.5em;
+  padding: 0.8em 2em;
   border-radius: 5px;
   background: transparent;
   border: 1px solid #fff;
